# sprout_downloader_python

./: README.md  requirements.txt  run_sprout.bat  sprout_gradio.py
sprout_downloader/: pyproject.toml
sprout_downloader/src/sprout_downloader/: __init__.py  __main__.py  downloader.py  fetcher.py  ui.py
