[project]
authors = [{name = "dnth", email = "dickson.neoh@gmail.com"}]
name = "sprout_downloader"
requires-python = ">= 3.10, < 3.12"
version = "0.1.0"
dependencies = ["gradio", "pycryptodome>=3.21.0,<4", "m3u8>=6.0.0,<7", "validators>=0.34.0,<0.35", "requests", "colorama"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
sprout_downloader = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ffmpeg = ">=7.1.0,<8"
